Semi-fixed title spacing on equiptment page

--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -242,6 +242,7 @@ footer .social img {
     grid-row: 1/2;
     width: 100%;
     background-color: #285d7b;
+    margin: 0 40px 40px 0;
 }
 
 .equipment-title h1 {
